Task functionality added, added database seeders
